Text for reviews pagination

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -69,7 +69,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/products">
-                    <span>Showing {{reviewsList.numberOfElements}} of {{reviewsList.totalElements}} products &nbsp;&nbsp;</span>
+                    <span>Showing {{reviewsList.numberOfElements}} of {{reviewsList.totalElements}} reviews &nbsp;&nbsp;</span>
                 </a>
                 </li>
             </ul>
